debug : correct the overflow x issue

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,6 +13,7 @@ html{
 }
 body{
     font-size: 1.6rem;
+    overflow-x: clip;
 }
 .container{
     display: grid;
